--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JS Boilerplace</title>
+    <title>Stackblitz</title>
     <link rel="stylesheet" href="../src/style.css" />
 </head>
   
@@ -23,6 +23,16 @@
              <a href="https://stackblitz.com/github/Energon89/stackblitz/tree/master/vynilizer" class="d_ popstripeRs" data-notrack="true" target="_blank">
                <span dir="ltr">Vynilizer (test task)</span>
                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+             </a></div>
+             <div class="ga_" style="border-left-color: #581500">
+              <a href="https://stackblitz.com/github/Energon89/stackblitz/tree/master/specks" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Specks (test task)</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+             </a></div>
+             <div class="ga_" style="border-left-color: #ebc105">
+              <a href="https://stackblitz.com/github/Energon89/stackblitz/tree/master/elephant-js" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Elephant-JS (test task)</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
              </a></div>
 
           </div>
