add task stopwatchtimer

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,12 @@
                 <span dir="ltr">Elephant-JS (test task)</span>
                 <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
              </a></div>
-
+             <div class="ga_" style="border-left-color: #05eb8b">
+              <a href="https://stackblitz.com/github/Energon89/stackblitz/tree/master/clock-stopwatch-timer" class="d_ popstripeRs" data-notrack="true" target="_blank">
+                <span dir="ltr">Clock Stopwatch Timer</span>
+                <div class="ja_" style="background-image: url(https://afs.googleusercontent.com/dp-teaminternet/arr_3faad3.png)"></div>
+             </a></div>
+         
           </div>
         </div>
 			</div>
